--- a/editbench.config
+++ b/editbench.config
@@ -1,11 +1,6 @@
 # EditBench Docker Configuration
-# Edit the values below for your setup
 
-# PROJECT_DIR: Absolute path to this project directory
-PROJECT_DIR="FILL IN THIS"
-
-# DEFAULT_SCRIPT: The main Python script to run
-DEFAULT_SCRIPT="test_only_example.py"
+# Defaults should work fine for these, but can change if you'd like.
 
 # IMAGE_NAME: Docker image name
 IMAGE_NAME="editbench:latest"
@@ -13,9 +8,13 @@ IMAGE_NAME="editbench:latest"
 # PYTHON_VERSION: Python version for environment
 PYTHON_VERSION="3.12"
 
+# Edit the values below for your setup
+
+# TESTING_SCRIPT: The main Python script to run
+TESTING_SCRIPT="examples/test_editbench.py"
+
 # EVAL_MODEL: Model name to evaluate
+# This can be any folder name you want inside "generations" and doesn't have to be limited to a model name.
 EVAL_MODEL="gpt-o3-mini"
 
-# HF_TOKEN: your HF token for calling load_dataset
-HF_TOKEN=""
-
+# A comment to make sure the last line isn't deleted.
